--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap');
 
-.big-container
+body
 {
 	background-color: #1E1E1E;
 }
